--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,14 @@
 <resources>
     <string name="app_name">Tasks</string>
     <string name="action_settings">Settings</string>
-
-
     <string-array name="planets_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
+        <item>Не повторять</item>
+        <item>Раз в день</item>
+        <item>Раз в день (пн-пт)</item>
+        <item>Раз в день (сб-вс)</item>
+        <item>Раз в неделю</item>
+        <item>Раз в месяц</item>
+        <item>Раз в год</item>
+        <item>Другое</item>
     </string-array>
 </resources>
