Upgraded #3 allColors - access, primary + Dark

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
         <item>Раз в год</item>
         <item>Другое</item>
     </string-array>
+    <item name="visible" type="id"/>
+    <item name="masked" type="id"/>
 </resources>
